--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pendo-experience",
-  "homepage": "https://fortynachos.github.io/ps-sandbox",
+  "homepage": "https://bryndonhumphrey.github.io/ps-sandbox",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
